bk_ida/gccida/g0/asprintf
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asprintf/src/asprintf.c:532:8: error: use of undeclared identifier 'tcmalloc'
return tcmalloc::HugePageAwareAllocator::AllocEnormous( buf, fmt, ap); 
       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asprintf/src/asprintf.c:532:16: error: expected expression
return tcmalloc::HugePageAwareAllocator::AllocEnormous( buf, fmt, ap); 
               ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/asprintf/src/obj/asprintf.o] Error 1
